# Copyright 2021 Canonical Ltd.
# See LICENSE file for licensing details.
[project]
name = "loki-k8s"
version = "0.0"
requires-python = "~=3.8"

dependencies = [
  "ops",
  "cosl",
  "kubernetes",
  "requests",
  "pyyaml",
  "lightkube",
  "lightkube-models",
  "aiohttp!=3.11.13",  # Yanked
  "jsonschema",
  "cryptography",
  "pydantic>=2.9.0",
  "importlib-metadata==6.0.0",
  "opentelemetry-api==1.21.0",
  "opentelemetry-exporter-otlp-proto-common==1.21.0",
  "opentelemetry-exporter-otlp-proto-http==1.21.0",
  "opentelemetry-proto==1.21.0",
  "opentelemetry-sdk==1.21.0",
  "opentelemetry-semantic-conventions==0.42b0",
]

[project.optional-dependencies]
dev = [
  # Linting
  "ruff",
  "codespell",
  # Static
  "pyright<1.1.399", # 1.1.399 vendors typeshed that dropped Python 3.8 support
  # Unit
  "pytest",
  "coverage[toml]",
  "ops[testing]",
  "responses",
  "fs",
  # Interface
  "pytest-interface-tester",
  # Integration
  "juju",
  "pytest-operator",
  "minio",
  "sh",
]

# Testing tools configuration
[tool.coverage.run]
branch = true

[tool.coverage.report]
show_missing = true

# Formatting tools configuration
[tool.black]
line-length = 99
target-version = ["py38"]

# Linting tools configuration
[tool.ruff]
line-length = 99
extend-exclude = ["__pycache__", "*.egg_info"]
lint.select = ["E", "W", "F", "C", "N", "R", "D", "I001"]
# Ignore E501 because using black creates errors with this
# Ignore D107 Missing docstring in __init__
lint.ignore = ["E501", "D107", "RET504"]
# D100, D101, D102, D103: Ignore missing docstrings in tests
lint.per-file-ignores = {"tests/*" = ["D100","D101","D102","D103"]}
lint.pydocstyle.convention = "google"

# Static analysis tools configuration
[tool.pyright]
extraPaths = ["lib"]
pythonVersion = "3.8"
pythonPlatform = "All"
exclude = [
  "tests/integration/loki-tester/**",
  "tests/integration/log-proxy-tester/**",
  "tests/integration/log-forwarder-tester/**"
]

[tool.pytest.ini_options]
minversion = "6.0"
log_cli_level = "INFO"
asyncio_mode = "auto"
addopts = "--tb=native --verbose --capture=no --log-cli-level=INFO"
markers = ["setup", "work", "teardown"]

[tool.codespell]
skip = ".git,.tox,build,venv*"
ignore-words-list = "assertIn"
