# Copyright 2025 Canonical Ltd.
# See LICENSE file for licensing details.
[project]
name = "loki-tester"
version = "0.0"
requires-python = "~=3.8"

dependencies = [
  "ops",
  "cosl",
  "cryptography",
  "jsonschema",
  "pydantic>=2",
  "python-logging-loki",
]

[project.optional-dependencies]
dev = [
  # Linting
  "ruff",
  "codespell",
  # Static
  "pyright",
  # Unit
  "pytest",
  "coverage[toml]",
  "ops[testing]",
  "responses",
  "fs",
  # Interface
  "pytest-interface-tester",
  # Integration
  "juju",
  "pytest-operator",
  "minio",
  "sh",
  "jubilant",
]

# Testing tools configuration
[tool.coverage.run]
branch = true

[tool.coverage.report]
show_missing = true

# Formatting tools configuration
[tool.black]
line-length = 99
target-version = ["py38"]

# Linting tools configuration
[tool.ruff]
line-length = 99
extend-exclude = ["__pycache__", "*.egg_info"]
lint.select = ["E", "W", "F", "C", "N", "R", "D", "I001"]
# Ignore E501 because using black creates errors with this
# Ignore D107 Missing docstring in __init__
lint.ignore = ["E501", "D107", "RET504"]
# D100, D101, D102, D103: Ignore missing docstrings in tests
lint.per-file-ignores = {"tests/*" = ["D100","D101","D102","D103"]}
lint.pydocstyle.convention = "google"

# Static analysis tools configuration
[tool.pyright]
extraPaths = ["lib"]
pythonVersion = "3.8"
pythonPlatform = "All"
exclude = [
  "tests/integration/loki-tester/**",
  "tests/integration/log-proxy-tester/**",
  "tests/integration/log-forwarder-tester/**"
]

[tool.pytest.ini_options]
minversion = "6.0"
log_cli_level = "INFO"
asyncio_mode = "auto"
addopts = "--tb=native --verbose --capture=no --log-cli-level=INFO"
markers = ["setup", "work", "teardown"]

[tool.codespell]
skip = ".git,.tox,build,venv*"
ignore-words-list = "assertIn"